apps/uptimekuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
  namespace: uptimekuma
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptimekuma
  template:
    metadata:
      labels:
        app: uptimekuma
    spec:
      enableServiceLinks: false
      containers:
        - name: uptimekuma
          image: louislam/uptime-kuma:alpine
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            limits:
              memory: 768Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "10m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptimekuma-data
